@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.5.2
-Date: 2020-11-18
+Date: 2020-12-01
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
