@@ -165,6 +165,11 @@ muffleRNGwarning <- function(w) {
     invokeRestart("muffleWarning")
 }
 
+# .combine function for multiple rbinds in foreach
+comb <- function(x, ...) {  
+    mapply(rbind,x,...,SIMPLIFY=FALSE)
+}
+
 #' @importFrom MASS ginv
 # this function maintains backwards compatibility with momentuHMM versions <1.4.0 (workBounds), <1.4.3 (betaCons), and <1.5.0 (mixtures)
 delta_bc <- function(m){
